...
        if self.isLastQuestion(){
            let text = correctAnswers == self.questionsAmount ?
            "Поздравляем, вы ответили на \(questionsAmount) из \(questionsAmount)!" :
            "Вы ответили на \(correctAnswers) из 10, попробуйте еще раз!"
            
            let viewModel = QuizResultsViewModel (
                title: "Этот раунд закончен!",
                text: text,
                buttonText: "Сыграть еще раз")
            viewController?.show(quiz: viewModel)
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
...
